--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>خوێندکارانی رەهێ و ماتین</h1>
+        <h1>خوێندکارانی راهی و مەتین</h1>
         <p>ماڵپەڕی تایبەتی بەرزکردنەوەی تەنیشت</p>
     </header>
     <main>
         <section class="profiles">
             <div class="card">
-                <h2>رەهێ</h2>
-                <p>تێکنیشنەکی زانا و بەسوود لە بواری کۆمپیووتر.</p>
+                <h2>راهی</h2>
+                <p>تەمەنی ١٥ سالە وە لە شاری سۆران دەژێت هەروەها درووستکەری پرۆگرامی گووگلە</p>
                 <button onclick="showInfo('rahi')">زانیاری زیاتر</button>
             </div>
             <div class="card">
-                <h2>ماتین</h2>
-                <p>بە سوود لە بواری چاککردنەوە و ئاڵەتە ئەلیکترۆنییەکان.</p>
+                <h2>مەتین</h2>
+                <p>تەمەنی ١٣ سالە وە خەلکی شاری سۆرانە هەروەها خاوەنی کۆمپانیای فیرارییە</p>
                 <button onclick="showInfo('matin')">زانیاری زیاتر</button>
             </div>
         </section>
