--- a/index.html
+++ b/index.html
@@ -8,44 +8,47 @@
 </head>
 <body>
     <header>
-        <h1>خوێندکارانی رەهێ و ماتین</h1>
-        <p>بەشی تایبەتی هەڵبژاردن و هەواڵی نوێ</p>
+        <h1>ماڵپەڕی تایبەتی رەهێ و ماتین</h1>
+        <p>زانیاری زۆر بەرزە لەبارەی داهێنەرانی بەرز.</p>
     </header>
+
     <main>
         <section class="intro">
-            <h2>نێوان نوێنەران</h2>
-            <p>ئەم ماڵپەڕە درووستکراوە بەرزکردنەوەی تواناکانی رەهێ و ماتین.</p>
+            <h2>ماڵپەڕی تایبەتی</h2>
+            <p>ئەم ماڵپەڕە درووستکراوە بەرزکردنەوەی تواناکانی تایبەتی داهێنەرەکان.</p>
         </section>
 
         <section class="profiles">
-            <div class="card">
-                <h2>راهی</h2>
-                <p>پێشەوە بوونی زانیاری کۆمپیووتر و زانیاری نوێکار.</p>
-                <button onclick="showInfo('rahi')">زانیاری زیاتر</button>
+            <div class="card" onclick="showModal('rahi')">
+                <h2>رەهێ</h2>
+                <p>زانیاری زۆر بەرز لەبارەی پەروەردەی ئەلیکترۆنی و زانیاری تایبەتی.</p>
             </div>
-            <div class="card">
-                <h2>مەتین</h2>
-                <p>کارکردنی چاکسازی و پەرەپێدانی نوێ.</p>
-                <button onclick="showInfo('matin')">زانیاری زیاتر</button>
+            <div class="card" onclick="showModal('matin')">
+                <h2>ماتین</h2>
+                <p>ئازمونی زۆرە لە چاکسازی و پیشەکاری تایبەتی بەرز.</p>
             </div>
         </section>
 
         <section id="game-section">
             <h2>یاری تایبەتی</h2>
-            <canvas id="gameCanvas" width="300" height="300"></canvas>
-            <p>ئەو توپەی قەڵەش بگرە.</p>
-        </section>
-
-        <section id="more-info" class="hidden">
-            <h2>زانیاری زیاتر</h2>
-            <p id="info-text"></p>
-            <button onclick="hideInfo()">گەڕانەوە</button>
+            <canvas id="gameCanvas" width="400" height="400"></canvas>
+            <p>بەسەر ئەو مەوانەدا ڕابگرە.</p>
         </section>
     </main>
 
     <footer>
-        <p>ئەم ماڵپەڕە درووستکراوە لەلایەن راهی و مەتین. © 2024</p>
+        <p>© 2024، درووستکراوە لەلایەن رەهێ و ماتین</p>
     </footer>
+
+    <!-- Modal -->
+    <div id="modal" class="hidden">
+        <div class="modal-content">
+            <span class="close" onclick="hideModal()">&times;</span>
+            <h2 id="modal-title"></h2>
+            <p id="modal-description"></p>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
