--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ku">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,36 +8,51 @@
 </head>
 <body>
     <header>
-        <h1>ماڵپەڕی تایبەتی رەهێ و ماتین</h1>
-        <p>زانیاری زۆر بەرزە لەبارەی داهێنەرانی بەرز.</p>
+        <h1>Welcome to the Future of Innovation</h1>
+        <p>Rahi & Matin - Innovators of the Galaxy</p>
     </header>
 
     <main>
-        <section class="intro">
-            <h2>ماڵپەڕی تایبەتی</h2>
-            <p>ئەم ماڵپەڕە درووستکراوە بەرزکردنەوەی تواناکانی تایبەتی داهێنەرەکان.</p>
+        <section id="about">
+            <h2>About Us</h2>
+            <p>We are two visionary technicians leading the world into the future. Our work blends science, technology, and imagination to create groundbreaking innovations.</p>
         </section>
 
-        <section class="profiles">
-            <div class="card" onclick="showModal('rahi')">
-                <h2>رەهێ</h2>
-                <p>زانیاری زۆر بەرز لەبارەی پەروەردەی ئەلیکترۆنی و زانیاری تایبەتی.</p>
-            </div>
-            <div class="card" onclick="showModal('matin')">
-                <h2>ماتین</h2>
-                <p>ئازمونی زۆرە لە چاکسازی و پیشەکاری تایبەتی بەرز.</p>
+        <section id="profiles">
+            <h2>Meet the Team</h2>
+            <div class="card-container">
+                <div class="card" onclick="showModal('rahi')">
+                    <img src="c:\Users\XPRISTO\OneDrive\Pictures\Camera Roll\WIN_20241229_21_57_36_Pro.jpg" alt="Rahi">
+                    <h3>Rahi</h3>
+                    <p>Click to explore the incredible feats of Rahi.</p>
+                </div>
+                <div class="card" onclick="showModal('matin')">
+                    <img src="c:\Users\XPRISTO\OneDrive\Pictures\Camera Roll\WIN_20241229_21_52_17_Pro.jpg" alt="Matin">
+                    <h3>Matin</h3>
+                    <p>Click to dive into Matin's world of possibilities.</p>
+                </div>
             </div>
         </section>
 
-        <section id="game-section">
-            <h2>یاری تایبەتی</h2>
-            <canvas id="gameCanvas" width="400" height="400"></canvas>
-            <p>بەسەر ئەو مەوانەدا ڕابگرە.</p>
+        <section id="services">
+            <h2>Our Expertise</h2>
+            <div class="service">
+                <h3>Artificial Intelligence</h3>
+                <p>Revolutionizing the future with self-aware machines and intelligent systems.</p>
+            </div>
+            <div class="service">
+                <h3>Space Exploration</h3>
+                <p>Designing technologies that have reached distant galaxies.</p>
+            </div>
+            <div class="service">
+                <h3>Quantum Computing</h3>
+                <p>Pioneering advancements in computational speeds beyond imagination.</p>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>© 2024، درووستکراوە لەلایەن رەهێ و ماتین</p>
+        <p>© 2024 Rahi & Matin. Future starts here.</p>
     </footer>
 
     <!-- Modal -->
