--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
         <section id="profiles">
             <h2>Meet the Team</h2>
             <div class="card-container">
-                <div class="card" onclick="showModal('rahi')">
-                    <img src="c:\Users\XPRISTO\OneDrive\Pictures\Camera Roll\WIN_20241229_21_57_36_Pro.jpg" alt="Rahi">
+                <div class="card">
+                    <img src="images/WIN_20241229_21_57_36_Pro.jpg" alt="Rahi">
                     <h3>Rahi</h3>
-                    <p>Click to explore the incredible feats of Rahi.</p>
+                    <p>Rahi is a groundbreaking technologist known for creating AI systems that can dream.</p>
+                    <button onclick="showModal('rahi')">Learn More</button>
                 </div>
-                <div class="card" onclick="showModal('matin')">
-                    <img src="c:\Users\XPRISTO\OneDrive\Pictures\Camera Roll\WIN_20241229_21_52_17_Pro.jpg" alt="Matin">
+                <div class="card">
+                    <img src="images/WIN_20241229_21_52_17_Pro.jpg" alt="Matin">
                     <h3>Matin</h3>
-                    <p>Click to dive into Matin's world of possibilities.</p>
+                    <p>Matin is a visionary scientist pushing boundaries in quantum mechanics.</p>
+                    <button onclick="showModal('matin')">Learn More</button>
                 </div>
             </div>
         </section>
@@ -52,7 +54,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Rahi & Matin. Future starts here.</p>
+        <p>© 2024 Rahi & Matin. The Future starts here.</p>
     </footer>
 
     <!-- Modal -->
